; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-thin.c_issue_discard.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-thin.c_issue_discard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.discard_op = type { i32, %struct.thin_c* }
%struct.thin_c = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@GFP_NOWAIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.discard_op*, i64, i64)* @issue_discard to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @issue_discard(%struct.discard_op* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.discard_op*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.thin_c*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.discard_op* %0, %struct.discard_op** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load %struct.discard_op*, %struct.discard_op** %4, align 8
  %11 = getelementptr inbounds %struct.discard_op, %struct.discard_op* %10, i32 0, i32 1
  %12 = load %struct.thin_c*, %struct.thin_c** %11, align 8
  store %struct.thin_c* %12, %struct.thin_c** %7, align 8
  %13 = load %struct.thin_c*, %struct.thin_c** %7, align 8
  %14 = getelementptr inbounds %struct.thin_c, %struct.thin_c* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @block_to_sectors(i32 %15, i64 %16)
  store i32 %17, i32* %8, align 4
  %18 = load %struct.thin_c*, %struct.thin_c** %7, align 8
  %19 = getelementptr inbounds %struct.thin_c, %struct.thin_c* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* %5, align 8
  %23 = sub nsw i64 %21, %22
  %24 = call i32 @block_to_sectors(i32 %20, i64 %23)
  store i32 %24, i32* %9, align 4
  %25 = load %struct.thin_c*, %struct.thin_c** %7, align 8
  %26 = getelementptr inbounds %struct.thin_c, %struct.thin_c* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* @GFP_NOWAIT, align 4
  %33 = load %struct.discard_op*, %struct.discard_op** %4, align 8
  %34 = getelementptr inbounds %struct.discard_op, %struct.discard_op* %33, i32 0, i32 0
  %35 = call i32 @__blkdev_issue_discard(i32 %29, i32 %30, i32 %31, i32 %32, i32 0, i32* %34)
  ret i32 %35
}

declare dso_local i32 @block_to_sectors(i32, i64) #1

declare dso_local i32 @__blkdev_issue_discard(i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
